32 bit fixes